--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="https://media.discordapp.net/attachments/1164029381929353217/1171571239005982780/Project_penguin.png?ex=655d29be&is=654ab4be&hm=af6899705529d30929d67a905356ca2e886ef223d4454addab47a10993dd2efe&=" alt="Project Penguin Logo" width="250" height="250">
+            <img src="https://files.catbox.moe/oq7ohm.png" alt="Project Penguin Logo" width="250" height="250">
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
