--- a/about.html
+++ b/about.html
@@ -23,10 +23,10 @@
             <h2>Follow Us on Social Media:</h2>
             <div class="social-links">
                 <a href="https://twitter.com/PPenguinStudio" target="_blank">
-                    <img src="https://media.discordapp.net/attachments/1144882484794884148/1171666113357164695/twitter-x-logo-577BCAE525-seeklogo.com.png?ex=655d8219&is=654b0d19&hm=84a617ff7a78227207e7b72541ec9f4942c493a059f283d05d9dacfcc88f9d40&=" alt="X" width="50" height="50">
+                    <img src="https://files.catbox.moe/e5satv.png" alt="X" width="50" height="50">
                 </a>
                 <a href="https://www.instagram.com/projectpenguinstudio/" target="_blank">
-                    <img src="https://media.discordapp.net/attachments/1144882484794884148/1171666112933527582/new-Instagram-logo-black-glyph.png?ex=655d8219&is=654b0d19&hm=74990b3a86c5b64fc849560b7f00f944372f7e1bedfe8ce7248d309617ca7220&=&width=676&height=676" alt="Instagram" width="50" height="50">
+                    <img src="https://files.catbox.moe/c8i4wc.png" alt="Instagram" width="50" height="50">
                 </a>
             </div>
         </main>
