--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Project Penguin Game Studio</title>
-    <link rel="icon" href="https://media.discordapp.net/attachments/1144882484794884148/1172005407108108359/Safeimagekit-resized-img.png?ex=655ebe17&is=654c4917&hm=dde9c8c38f139230f472a2951f5a16ef87e4b3260e46af875f795cf63270b0b2&=&width=40&height=40" type="image/png">
+    <link rel="icon" href="https://files.catbox.moe/b9av29.png" type="image/png">
 </head>
 
 <body>
