--- a/games.html
+++ b/games.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Our Games - Project Penguin Game Studio</title>
+     <link rel="icon" href="https://files.catbox.moe/b9av29.png" type="image/png">
 </head>
 
 <body>
