--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <header>
             <h1>About Project Penguin Game Studio</h1>
             <nav>
-                <a href="index.html">Home</a>
+                <a href="home.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="games.html">Games</a>
             </nav>
