--- a/index.html
+++ b/index.html
@@ -5,22 +5,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Project Penguin Game Studio</title>
-    <link rel="icon" href="https://files.catbox.moe/b9av29.png" type="image/png">
+    <title>Project Penguin Studio</title>
+    <style>
+        body {
+            background-image: url("https://files.catbox.moe/fk6hmf.jpg");
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-position: center center;
+        }
+        #cs {
+              text-align: center;
+              color: #FFFFFF
+        }
+        
+        #pp{
+            text-align: center;
+            color: #FFFFFF;
+        }
+    </style>
 </head>
 
 <body>
     <div class="container">
-        <header>
-            <img src="https://files.catbox.moe/oq7ohm.png" alt="Project Penguin Logo" width="250" height="250">
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="games.html">Games</a>
-            </nav>
-        </header>
-        <main>
-        </main>
+  <br>
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br>
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+    <h1 id="cs" ><b>Coming Soon</b></h1>
+  <br>
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br>
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+    <br>
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br>
+  <br> 
+  <br> 
+  <br> 
+  <br>
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br> 
+  <br>
+  <br> 
+  <br> 
+  <br> 
+
+    <h3 id="pp">Project Penguin studio 2024</h3>
+
+
     </div>
 </body>
 
