--- a/index.html
+++ b/index.html
@@ -5,92 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Project Penguin Studio</title>
-    <style>
-        body {
-            background-image: url("https://files.catbox.moe/fk6hmf.jpg");
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-position: center center;
-        }
-        #cs {
-              text-align: center;
-              color: #FFFFFF
-        }
-        
-        #pp{
-            text-align: center;
-            color: #FFFFFF;
-        }
-    </style>
+    <title>Project Penguin Game Studio</title>
 </head>
 
 <body>
     <div class="container">
-  <br>
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br>
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-    <h1 id="cs" ><b>Coming Soon</b></h1>
-  <br>
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br>
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-    <br>
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br>
-  <br> 
-  <br> 
-  <br> 
-  <br>
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br> 
-  <br>
-  <br> 
-  <br> 
-  <br> 
-
-    <h3 id="pp">Project Penguin studio 2024</h3>
-
-
+        <header>
+            <img src="https://files.catbox.moe/oq7ohm.png" alt="Project Penguin Logo" width="250" height="250">
+            <nav>
+                <a href="home.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="games.html">Games</a>
+            </nav>
+        </header>
+        <main>
+            <h2>Welcome</h2>
+            <p>Hello and welcome to Project Penguin Studios, we may not look like much right now, but we will hopefully have more stuff to look at in the future</p>
+        </main>
     </div>
 </body>
 
