--- a/JadeKuehnel.html
+++ b/JadeKuehnel.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Jade Kuehnel</title>
+    <link rel="icon" type="image/png" href="https://files.catbox.moe/s1ckg4.jpg">
 </head>
 
 <body>
@@ -32,6 +33,9 @@
                 <a href="showcase.html" style="color: white;">Photography Showcase</a>
                 <br>
                 <br>
+                                <a href="https://www.instagram.com/jadedoesphotography08/" target="_blank">
+                    <img src="https://files.catbox.moe/dxx8xa.png" alt="Instagram" width="50" height="50">
+                </a>
             </nav>
         </header>
         
