--- a/equipment.html
+++ b/equipment.html
@@ -1,5 +1,6 @@
 <head>
     <title>My Equipment</title>
+        <link rel="icon" type="image/png" href="https://files.catbox.moe/s1ckg4.jpg">
     <style>
     body{
         background-color:#010101;
