--- a/showcase.html
+++ b/showcase.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Showcase</title>
+        <link rel="icon" type="image/png" href="https://files.catbox.moe/s1ckg4.jpg">
     <style>
             body{
             background-color:#010101;
