--- a/testing.html
+++ b/testing.html
@@ -1,15 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="description" content="Free Web tutorials">
-  <meta name="keywords" content="HTML,CSS,XML,JavaScript">
-  <meta name="author" content="John Doe">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-
-<p>All meta information goes in the head section...</p>
-
-</body>
-</html>
+<meta property="og:title" content="Site Title" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="http://my.site.com" />
+<meta property="og:image" content="http://my.site.com/images/thumb.png" />
+<meta property="og:description" content="Site description" />
+<meta name="theme-color" content="#FF0000"
