--- a/equipment.html
+++ b/equipment.html
@@ -59,7 +59,12 @@
 
     </style>
 
-
+<meta property="og:title" content="Jade Kuehnel" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://projectpenguin.ca/JadeKuehnel.html" />
+<meta property="og:description" content="Hello this is my website for my projects" />
+<meta name="theme-color" content="#FF0000"
+</head>
 </body>
     <h1 id="title">My Camera Equipment</h1>
   <p id="box1">A list of my camera equipment</p>
