--- a/JadeKuehnel.html
+++ b/JadeKuehnel.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="styles.css">
     <title>Jade Kuehnel</title>
     <link rel="icon" type="image/png" href="https://files.catbox.moe/s1ckg4.jpg">
+<meta property="og:title" content="Jade Kuehnel" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://projectpenguin.ca/JadeKuehnel.html" />
+<meta property="og:description" content="Hello this is my website for my projects" />
+<meta property="og:image" content="https://files.catbox.moe/s1ckg4.jpg" />
+<meta name="theme-color" content="#FF0000"
 </head>
 
 <body>
