--- a/Software.html
+++ b/Software.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Software</title>
-       = <link rel="icon" type="image/png" href="https://files.catbox.moe/s1ckg4.jpg">
+    <link rel="icon" type="image/png" href="https://files.catbox.moe/s1ckg4.jpg">
     
     <style>
         body{
@@ -28,6 +28,11 @@
             background-color: #902bf5; /* Darker Green */
         }
     </style>
+    <meta property="og:title" content="Jade Kuehnel" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://projectpenguin.ca/JadeKuehnel.html" />
+<meta property="og:description" content="Hello this is my website for my projects" />
+<meta name="theme-color" content="#FF0000"
 </head>
 
 <body>
