--- a/showcase.html
+++ b/showcase.html
@@ -39,6 +39,11 @@
             background-color: #902bf5;
         }
     </style>
+    <meta property="og:title" content="Jade Kuehnel" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://projectpenguin.ca/JadeKuehnel.html" />
+<meta property="og:description" content="Hello this is my website for my projects" />
+<meta name="theme-color" content="#FF0000"
 </head>
 <body>
     <div id="image-grid">
