--- a/JadeKuehnel.html
+++ b/JadeKuehnel.html
@@ -11,7 +11,7 @@
 <meta property="og:url" content="https://projectpenguin.ca/JadeKuehnel.html" />
 <meta property="og:description" content="Hello this is my website for my projects" />
 <meta property="og:image" content="https://files.catbox.moe/s1ckg4.jpg" />
-<meta name="theme-color" content="#FF0000"
+<meta name="theme-color" content="#010101"
 </head>
 
 <body>
