--- a/equipment.html
+++ b/equipment.html
@@ -63,7 +63,8 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://projectpenguin.ca/JadeKuehnel.html" />
 <meta property="og:description" content="Hello this is my website for my projects" />
-<meta name="theme-color" content="#FF0000"
+<meta property="og:image" content="https://files.catbox.moe/s1ckg4.jpg" />
+<meta name="theme-color" content="#010101"
 </head>
 </body>
     <h1 id="title">My Camera Equipment</h1>
