--- a/JadeKuehnel.html
+++ b/JadeKuehnel.html
@@ -40,7 +40,7 @@
                 <br>
                 <br>
                                 <a href="https://www.instagram.com/jadedoesphotography08/" target="_blank">
-                    <img src="https://files.catbox.moe/dxx8xa.png" alt="Instagram" width="50" height="50">
+                    <img src="ProjectPenguin/Website Pictures/Insta.png" alt="Instagram" width="50" height="50">
                 </a>
             </nav>
         </header>
