--- a/showcase.html
+++ b/showcase.html
@@ -43,56 +43,56 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://projectpenguin.ca/JadeKuehnel.html" />
 <meta property="og:description" content="Hello this is my website for my projects" />
-<meta property="og:image" content="https://files.catbox.moe/s1ckg4.jpg" />
+<meta property="og:image" content="Favicon.jpg" />
 <meta name="theme-color" content="#010101"
 </head>
 <body>
     <div id="image-grid">
  
         <div id="image">
-            <img src="https://files.catbox.moe/z9wxyd.jpg" alt="Image 1" width="100%">
+            <img src="IMGP3019.jpg" alt="Image 1" width="100%">
         </div>
         <div id="image">
-            <img src="https://files.catbox.moe/nspwb4.jpg" alt="Image 2" width="100%">
+            <img src="IMGP3022.jpg" alt="Image 2" width="100%">
         </div>
         <div class="image">
-            <img src="https://files.catbox.moe/4xpd4p.jpg" alt="Image 3" width="100%">
+            <img src="IMGP3028.jpg" alt="Image 3" width="100%">
         </div>
         <div class="image">
-            <img src="https://files.catbox.moe/u12ywc.jpg" alt="Image 3" width="100%">
+            <img src="IMG_4529.jpg" alt="Image 3" width="100%">
         </div>
         <div class="image">
-            <img src="https://files.catbox.moe/1d9ljm.jpg" alt="Image 3" width="100%">
+            <img src="IMG_4530.jpg" alt="Image 3" width="100%">
         </div>
         <div class="image">
-            <img src="https://files.catbox.moe/rqt8fi.jpg" alt="Image 3" width="100%">
+            <img src="IMG_4533.jpg" alt="Image 3" width="100%">
         </div>
                 <div class="image">
-            <img src="https://files.catbox.moe/h602lj.jpg" alt="Image 3" width="100%">
+            <img src="IMG_4563.jpg" alt="Image 3" width="100%">
         </div>
                 <div class="image">
-            <img src="https://files.catbox.moe/crncz2.jpg" alt="Image 3" width="100%">
+            <img src="IMG_4553.jpg" alt="Image 3" width="100%">
         </div>
                 <div class="image">
-            <img src="https://files.catbox.moe/lb2svn.jpg" alt="Image 3" width="100%">
+            <img src="IMG_4554.jpg alt="Image 3" width="100%">
         </div>
                 <div class="image">
-            <img src="https://files.catbox.moe/z17tli.jpg" alt="Image 3" width="100%">
+            <img src="IMG_4539.jpg" alt="Image 3" width="100%">
         </div>
                         <div class="image">
-            <img src="https://files.catbox.moe/sdo1vq.jpg" alt="Image 3" width="100%">
+            <img src="IMG_4551.jpg" alt="Image 3" width="100%">
         </div>
                         <div class="image">
-            <img src="https://files.catbox.moe/4pqbfp.jpg" alt="Image 3" width="100%">
+            <img src="IMG_4555.jpg" alt="Image 3" width="100%">
         </div>
                         <div class="image">
-            <img src="https://files.catbox.moe/s914by.jpg" alt="Image 3" width="100%">
+            <img src="IMG_4560.jpg" alt="Image 3" width="100%">
         </div>
                         <div class="image">
-            <img src="https://files.catbox.moe/nhohwm.jpg" alt="Image 3" width="100%">
+            <img src="PXL_20240408_224341106.RAW-02.ORIGINAL.jpg alt="Image 3" width="100%">
         </div>
                                 <div class="image">
-            <img src="https://files.catbox.moe/1qtomj.jpg" alt="Image 3" width="100%">
+            <img src="IMG_4561.jpg" alt="Image 3" width="100%">
         </div>
                         <div id="back-to-index">
             <a href="JadeKuehnel.html"><button>Home</button></a>
