--- a/showcase.html
+++ b/showcase.html
@@ -74,7 +74,7 @@
             <img src="IMG_4553.jpg" alt="Image 3" width="100%">
         </div>
                 <div class="image">
-            <img src="IMG_4554.jpg alt="Image 3" width="100%">
+            <img src="IMG_4554.jpg" alt="Image 3" width="100%">
         </div>
                 <div class="image">
             <img src="IMG_4539.jpg" alt="Image 3" width="100%">
@@ -89,7 +89,7 @@
             <img src="IMG_4560.jpg" alt="Image 3" width="100%">
         </div>
                         <div class="image">
-            <img src="PXL_20240408_224341106.RAW-02.ORIGINAL.jpg alt="Image 3" width="100%">
+            <img src="PXL_20240408_224341106.RAW-02.ORIGINAL.jpg" alt="Image 3" width="100%">
         </div>
                                 <div class="image">
             <img src="IMG_4561.jpg" alt="Image 3" width="100%">
