--- a/JadeKuehnel.html
+++ b/JadeKuehnel.html
@@ -1,48 +1,64 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
     <title>Jade Kuehnel</title>
-    <link rel="icon" type="image/png" href="https://files.catbox.moe/s1ckg4.jpg">
-<meta property="og:title" content="Jade Kuehnel" />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://projectpenguin.ca/JadeKuehnel.html" />
-<meta property="og:description" content="Hello this is my website for my projects" />
-<meta property="og:image" content="https://files.catbox.moe/s1ckg4.jpg" />
-<meta name="theme-color" content="#010101"
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            background-color: #010101;
+            color: white;
+            margin: 0;
+            padding: 0;
+            /* Remove border from body */
+        }
+
+        header {
+            border: 10px solid #E0B0FF; /* Updated border color */
+            box-sizing: border-box; 
+        }
+
+        #title {
+            text-align: center;
+            color: white;
+            font-family: 'IBM Plex Sans Condensed', sans-serif;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 
 <body>
-    <style>
-            }
-     #title{
-         text-align:center;
-         color:white;
-         font-family: 'IBM Plex Sans Condensed', sans-serif;
+    <header>
+        <h1 id="title">Jade Kuehnel</h1>
+        <nav>
+            <a href="equipment.html">Camera Equipment</a>
+            <a href="Software.html">Software I use</a>
+            <a href="computer.html">Computer Specs</a>
+            <a href="showcase.html">Photography Showcase</a>
+            <br>
+            <br>
+            <a href="aboutme.html">About Me</a>
+            <br>
 
-
-     }
-             body{
-            background-color:#010101;
-            color:white;
-        }
-    </style>
-    <div class="container"
-        <header>
-    <h1 id="title">Jade Kuehnel</h1>
-            <nav>
-                <a href="equipment.html" style="color: white;">Camera Equipment</a>
-                <a href="Software.html" style="color: white;">Software I use</a>
-                <a href="computer.html" style="color: white;">Computer Specs</a>
-                <a href="showcase.html" style="color: white;">Photography Showcase</a>
-                <br>
-                <br>
-                                <a href="https://www.instagram.com/jadedoesphotography08/" target="_blank">
-                    <img src="Insta.png" alt="Instagram" width="50" height="50">
-                </a>
-            </nav>
-        </header>
-        
+        </nav>
+    </header>
+    <main>
+        <h2>Welcome</h2>
+        <p>Hello, welcome to my site, it is still a work in progress.</p>
+    </main>
+                <a href="https://www.instagram.com/jadedoesphotography08/" target="_blank">
+                <img src="Insta.png" alt="Instagram" width="50" height="50">
+            </a>
 </body>
+
+</html>
