--- a/showcase.html
+++ b/showcase.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Showcase</title>
-        <link rel="icon" type="image/png" href="Favicon.jpg">
+    <link rel="icon" type="image/png" href="Favicon.png">
     <style>
-            body{
+        body{
             background-color:#010101;
             color: white;
         }
@@ -18,13 +18,13 @@
         }
 
         /* Style for each image */
-        #image {
+        .image {
             width: 100%;
             height: auto;
             border-radius: 5px;
         }
         
-                #back-to-index button {
+        #back-to-index button {
             padding: 10px 20px;
             background-color: #902bf5;
             border: none;
@@ -40,61 +40,22 @@
         }
     </style>
     <meta property="og:title" content="Jade Kuehnel" />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://projectpenguin.ca/JadeKuehnel.html" />
-<meta property="og:description" content="Hello this is my website for my projects" />
-<meta property="og:image" content="Favicon.jpg" />
-<meta name="theme-color" content="#010101"
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://projectpenguin.ca/JadeKuehnel.html" />
+    <meta property="og:description" content="Hello this is my website for my projects" />
+    <meta property="og:image" content="Favicon.png" />
+    <meta name="theme-color" content="#010101">
 </head>
 <body>
     <div id="image-grid">
- 
-        <div id="image">
-            <img src="IMGP3019.jpg" alt="Image 1" width="100%">
-        </div>
-        <div id="image">
-            <img src="IMGP3022.jpg" alt="Image 2" width="100%">
+        <div class="image">
+            <img src="IMGP3019.png" alt="Image 1" width="100%">
         </div>
         <div class="image">
-            <img src="IMGP3028.jpg" alt="Image 3" width="100%">
+            <img src="IMGP3022.png" alt="Image 2" width="100%">
         </div>
-        <div class="image">
-            <img src="IMG_4529.jpg" alt="Image 3" width="100%">
-        </div>
-        <div class="image">
-            <img src="IMG_4530.jpg" alt="Image 3" width="100%">
-        </div>
-        <div class="image">
-            <img src="IMG_4533.jpg" alt="Image 3" width="100%">
-        </div>
-                <div class="image">
-            <img src="IMG_4563.jpg" alt="Image 3" width="100%">
-        </div>
-                <div class="image">
-            <img src="IMG_4553.jpg" alt="Image 3" width="100%">
-        </div>
-                <div class="image">
-            <img src="IMG_4554.jpg" alt="Image 3" width="100%">
-        </div>
-                <div class="image">
-            <img src="IMG_4539.jpg" alt="Image 3" width="100%">
-        </div>
-                        <div class="image">
-            <img src="IMG_4551.jpg" alt="Image 3" width="100%">
-        </div>
-                        <div class="image">
-            <img src="IMG_4555.jpg" alt="Image 3" width="100%">
-        </div>
-                        <div class="image">
-            <img src="IMG_4560.jpg" alt="Image 3" width="100%">
-        </div>
-                        <div class="image">
-            <img src="PXL_20240408_224341106.RAW-02.ORIGINAL.jpg" alt="Image 3" width="100%">
-        </div>
-                                <div class="image">
-            <img src="IMG_4561.jpg" alt="Image 3" width="100%">
-        </div>
-                        <div id="back-to-index">
+        <!-- Add other image elements here -->
+        <div id="back-to-index">
             <a href="JadeKuehnel.html"><button>Home</button></a>
         </div>
     </div>
