--- a/computer.html
+++ b/computer.html
@@ -1,11 +1,10 @@
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Computer Specs</title>
-        <link rel="icon" type="image/png" href="https://files.catbox.moe/s1ckg4.jpg">
+    <link rel="icon" type="image/png" href="https://files.catbox.moe/s1ckg4.png">
     
     <style>
         body{
@@ -29,16 +28,16 @@
         }
     </style>
     <meta property="og:title" content="Jade Kuehnel" />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://projectpenguin.ca/JadeKuehnel.html" />
-<meta property="og:description" content="Hello this is my website for my projects" />
-<meta property="og:image" content="https://files.catbox.moe/s1ckg4.jpg" />
-<meta name="theme-color" content="#010101"
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://projectpenguin.ca/JadeKuehnel.html" />
+    <meta property="og:description" content="Hello this is my website for my projects" />
+    <meta property="og:image" content="https://files.catbox.moe/s1ckg4.png" />
+    <meta name="theme-color" content="#010101">
 </head>
 
 <body>
     <main>
-                <div id="back-to-index">
+        <div id="back-to-index">
             <a href="JadeKuehnel.html"><button>Home</button></a>
         </div>
         <div class="software">
@@ -57,8 +56,6 @@
             <br> 237 SSD
             <br> </p>
         </div>
-
     </main>
 </body>
-
 </html>
