--- a/showcase.html
+++ b/showcase.html
@@ -54,7 +54,45 @@
         <div class="image">
             <img src="IMGP3022.png" alt="Image 2" width="100%">
         </div>
-        <!-- Add other image elements here -->
+        <div class="image">
+            <img src="IMGP3028.png" alt="Image 3" width="100%">
+        </div>
+        <div class="image">
+            <img src="IMG_4529.png" alt="Image 4" width="100%">
+        </div>
+        <div class="image">
+            <img src="IMG_4530.png" alt="Image 5" width="100%">
+        </div>
+        <div class="image">
+            <img src="IMG_4533.png" alt="Image 6" width="100%">
+        </div>
+        <div class="image">
+            <img src="IMG_4563.png" alt="Image 7" width="100%">
+        </div>
+        <div class="image">
+            <img src="IMG_4553.png" alt="Image 8" width="100%">
+        </div>
+        <div class="image">
+            <img src="IMG_4554.png" alt="Image 9" width="100%">
+        </div>
+        <div class="image">
+            <img src="IMG_4539.png" alt="Image 10" width="100%">
+        </div>
+        <div class="image">
+            <img src="IMG_4551.png" alt="Image 11" width="100%">
+        </div>
+        <div class="image">
+            <img src="IMG_4555.png" alt="Image 12" width="100%">
+        </div>
+        <div class="image">
+            <img src="IMG_4560.png" alt="Image 13" width="100%">
+        </div>
+        <div class="image">
+            <img src="PXL_20240408_224341106.RAW-02.ORIGINAL.png" alt="Image 14" width="100%">
+        </div>
+        <div class="image">
+            <img src="IMG_4561.png" alt="Image 15" width="100%">
+        </div>
         <div id="back-to-index">
             <a href="JadeKuehnel.html"><button>Home</button></a>
         </div>
