--- a/JadeKuehnel.html
+++ b/JadeKuehnel.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jade Kuehnel</title>
     <link rel="stylesheet" href="styles.css">
-        <link rel="icon" type="image/png" href="Favicon.jpg">
+        <link rel="icon" type="image/png" href="Favicon.png">
     <style>
         body {
             background-color: #010101;
@@ -47,8 +47,6 @@
             <a href="computer.html">Computer Specs</a>
             <a href="showcase.html">Photography Showcase</a>
             <br>
-            <br>
-            <a href="aboutme.html">About Me</a>
             <br>
 
         </nav>
