--- a/Software.html
+++ b/Software.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Software</title>
-    <link rel="icon" type="image/png" href="Favicon.jpg">
+    <link rel="icon" type="image/png" href="Favicon.png">
     
     <style>
         body{
@@ -32,7 +32,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://projectpenguin.ca/JadeKuehnel.html" />
 <meta property="og:description" content="Hello this is my website for my projects" />
-<meta property="og:image" content="Favicon.jpg" />
+<meta property="og:image" content="Favicon.png" />
 <meta name="theme-color" content="#010101"
 </head>
 
