--- a/JadeKuehnel.html
+++ b/JadeKuehnel.html
@@ -56,7 +56,7 @@
         <p>Hello, welcome to my site, it is still a work in progress.</p>
     </main>
                 <a href="https://www.instagram.com/jadedoesphotography08/" target="_blank">
-                <img src="Insta.png" alt="Instagram" width="50" height="50">
+                <img src="Insta.webp" alt="Instagram" width="50" height="50">
             </a>
 </body>
 
