--- a/Software.html
+++ b/Software.html
@@ -44,13 +44,13 @@
         <div class="software">
             <br>
             <br>
-            <img src="Lr.png" alt="Lr" width="50" height="50">
+            <img src="Lr.webp" alt="Lr" width="50" height="50">
             <h2>Lightroom mobile</h2>
             <p>I use Adobe Lightroom on my Google Pixel 6a.</p>
         </div>
         <br>
         <div class="software">
-            <img src="Ps.png" alt="Ps" width="50"  >
+            <img src="Ps.webp" alt="Ps" width="50"  >
             <h2>Adobe Photoshop 2024</h2>
             <p>I use Adobe Photoshop on my computer.</p>
         </div>
