--- a/computer.html
+++ b/computer.html
@@ -31,7 +31,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://projectpenguin.ca/JadeKuehnel.html" />
     <meta property="og:description" content="Hello this is my website for my projects" />
-    <meta property="og:image" content="https://files.catbox.moe/s1ckg4.png" />
+    <meta property="og:image" content="Favicon.png" />
     <meta name="theme-color" content="#010101">
 </head>
 
