--- a/equipment.html
+++ b/equipment.html
@@ -72,25 +72,25 @@
             <td>Pentax</td>
             <td>Pentax K10D</td>
             <td>Pentax-FA 100-300mm and Pentax-DA 16-45mm</td>
-            <td><img src="PentaxK10D.png" height="70px"></td>
+            <td><img src="PentaxK10D.webp" height="70px"></td>
         </tr>
         <tr>
             <td>Canon</td>
             <td>Canon Rebel XSi</td>
             <td>EF 75-300mm and EF-S 18-55mm</td>
-            <td><img src="CanonEOS.png" height="70px"></td>
+            <td><img src="CanonEOS.webp" height="70px"></td>
         </tr>
         <tr>
             <td>Google</td>
             <td>Google Pixel 6a</td>
             <td>Primary (12.2 mp) and Ultrawide (12mp)</td>
-            <td><img src="Pixel6a.png" height="70px"></td>
+            <td><img src="Pixel6a.webp" height="70px"></td>
         </tr>
         <tr>
             <td>Nintendo</td>
             <td>3DS</td>
             <td>Front (0.3 mp)</td>
-            <td><img src="3DS.png" height="70px"></td>
+            <td><img src="3DS.webp" height="70px"></td>
         </tr>
     </table>
     <div id="back-to-index">
