--- a/showcase.html
+++ b/showcase.html
@@ -49,49 +49,49 @@
 <body>
     <div id="image-grid">
         <div class="image">
-            <img src="IMGP3019.png" alt="Image 1" width="100%">
+            <img src="IMGP3019.webp" alt="Image 1" width="100%">
         </div>
         <div class="image">
-            <img src="IMGP3022.png" alt="Image 2" width="100%">
+            <img src="IMGP3022.webp" alt="Image 2" width="100%">
         </div>
         <div class="image">
-            <img src="IMGP3028.png" alt="Image 3" width="100%">
+            <img src="IMGP3028.webp" alt="Image 3" width="100%">
         </div>
         <div class="image">
-            <img src="IMG_4529.png" alt="Image 4" width="100%">
+            <img src="IMG_4529.webp" alt="Image 4" width="100%">
         </div>
         <div class="image">
-            <img src="IMG_4530.png" alt="Image 5" width="100%">
+            <img src="IMG_4530.webp" alt="Image 5" width="100%">
         </div>
         <div class="image">
-            <img src="IMG_4533.png" alt="Image 6" width="100%">
+            <img src="IMG_4533.webp" alt="Image 6" width="100%">
         </div>
         <div class="image">
-            <img src="IMG_4563.png" alt="Image 7" width="100%">
+            <img src="IMG_4563.webp" alt="Image 7" width="100%">
         </div>
         <div class="image">
-            <img src="IMG_4553.png" alt="Image 8" width="100%">
+            <img src="IMG_4553.webp" alt="Image 8" width="100%">
         </div>
         <div class="image">
-            <img src="IMG_4554.png" alt="Image 9" width="100%">
+            <img src="IMG_4554.webp" alt="Image 9" width="100%">
         </div>
         <div class="image">
-            <img src="IMG_4539.png" alt="Image 10" width="100%">
+            <img src="IMG_4539.webp" alt="Image 10" width="100%">
         </div>
         <div class="image">
-            <img src="IMG_4551.png" alt="Image 11" width="100%">
+            <img src="IMG_4551.webp" alt="Image 11" width="100%">
         </div>
         <div class="image">
-            <img src="IMG_4555.png" alt="Image 12" width="100%">
+            <img src="IMG_4555.webp" alt="Image 12" width="100%">
         </div>
         <div class="image">
-            <img src="IMG_4560.png" alt="Image 13" width="100%">
+            <img src="IMG_4560.webp" alt="Image 13" width="100%">
         </div>
         <div class="image">
-            <img src="PXL_20240408_224341106.RAW-02.ORIGINAL.png" alt="Image 14" width="100%">
+            <img src="PXL_20240408_224341106.RAW-02.ORIGINAL.webp" alt="Image 14" width="100%">
         </div>
         <div class="image">
-            <img src="IMG_4561.png" alt="Image 15" width="100%">
+            <img src="IMG_4561.webp" alt="Image 15" width="100%">
         </div>
         <div id="back-to-index">
             <a href="JadeKuehnel.html"><button>Home</button></a>
