--- a/JadeKuehnel.html
+++ b/JadeKuehnel.html
@@ -36,6 +36,12 @@
             text-decoration: underline;
         }
     </style>
+    <meta property="og:title" content="Jade Kuehnel" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://projectpenguin.ca/JadeKuehnel.html" />
+    <meta property="og:description" content="Hello this is my website for my projects" />
+    <meta property="og:image" content="Favicon.png" />
+    <meta name="theme-color" content="#010101">
 </head>
 
 <body>
