--- a/showcase.html
+++ b/showcase.html
@@ -49,7 +49,7 @@
 <body>
     <div id="image-grid">
         <div class="image">
-            <img src="IMGP3019.webp" alt="Image 1" width="100%">
+            <img draggable="false" src="IMGP3019.webp" alt="Image 1" width="100%">
         </div>
         <div class="image">
             <img src="IMGP3022.webp" alt="Image 2" width="100%">
