--- a/showcase.html
+++ b/showcase.html
@@ -93,7 +93,7 @@
         <div class="image">
             <img draggable="false" src="IMG_4561.webp" alt="Image 15" width="100%">
         </div>
-        <div id="back-to-home">
+        <div id="back-to-index">
             <a href="JadeKuehnel.html"><button>Home</button></a>
         </div>
     </div>
