--- a/showcase.html
+++ b/showcase.html
@@ -93,6 +93,9 @@
         <div class="image">
             <img draggable="false" src="IMG_4561.webp" alt="Image 15" width="100%">
         </div>
+                <div class="image">
+            <img draggable="false" src="IMG_4586.webp" alt="Image 16" width="100%">
+        </div>
         <div id="back-to-index">
             <a href="JadeKuehnel.html"><button>Home</button></a>
         </div>
