--- a/aboutme.html
+++ b/aboutme.html
@@ -36,7 +36,7 @@
 </head>
 <body>
     <header> 
-        <h1> About Me</h1>
+        <h1> About Me</h1 color:white>
     </header>
 
     <div class="container">
